--- a/style.css
+++ b/style.css
@@ -3,6 +3,28 @@ body{
     margin-left: 100px;
     
 }
+#hamburger-menu {
+    display: none; 
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 2rem;
+    height: 2rem;
+    background: transparent;
+    border: none;
+    z-index: 10;
+}
+
+#hamburger-menu div {
+    width: 2rem;
+    height: 0.25rem;
+    background: #333; 
+    border-radius: 10px;
+    transition: all 0.3s linear;
+    position: relative;
+    transform-origin: 1px;
+}
+
 #Nav{
     display: flex;
 }
@@ -12,9 +34,11 @@ body{
     margin-left: 20%;
     text-decoration: none;
 }
-li{
+
+a{
     text-decoration: none;
 }
+
 #h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 46px;
@@ -100,12 +124,20 @@ i{
           
            
         }
+
+    #navbar a:not(#hamburger-menu), #navbar button {
+                display: none;
+            }
+    #hamburger-menu {
+                display: flex;
+            }
+        
     
     #navbar{
         display: flex;
         gap: 3%;
         font-size: 10px;
-        margin-left: -5%;
+        margin-left: 5%;
       
     }
 
@@ -168,43 +200,69 @@ i{
 
     body{
         font-size: 200px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
+
+    #hamburger-menu {
+        display: none; 
+        cursor: pointer;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 36px;
+        height: 36px;
+        background: transparent;
+        border: none;
+        z-index: 10;
+    }
+    
+    #hamburger-menu div {
+        width: 36px;
+        height: 5px;
+        background: #333; 
+        border-radius: 10px;
+        transition: all 0.3s linear;
+        position: relative;
+        transform-origin: 1px;
+    }
+    
     #Nav{
         font-size: 10px;
        
      }
  
- #navbar{
+    #navbar{
      display: flex;
-     gap: 10%;
+     gap: 5%;
      font-size: 10px;
      
    
  }
 
- #h2{
+    #h2{
      font-family: Arial, Helvetica, sans-serif;
      font-size: 16px;
  }
 
- .man{
+    .man{
      display: block;
      gap: 2px;
      font-size: 10px;
  }
- #Logos{
+
+    #Logos{
      display: block;
-     gap:250px;
+     gap:150px;
      
  }
- #login{
+    #login{
      border-radius: 30px;
      width: 50px;
      height: 30px;
      font-size: 8px;
     
  }
- #join{
+    #join{
      border-radius: 30px;
      width: 50px;
      height: 30px;
@@ -213,38 +271,26 @@ i{
  
  
  }
- #hero-man{
+    #hero-man{
      width: 300px;
  }
- #explore{
+    #explore{
      border-radius: 30px;
      height: 20px;
      width: 80px;
      background-color: rgb(215, 23, 23);
      margin-left: -20%;
  }
- input{
+    input{
      border-radius: 30px;
      height: 20px;
      width: 100px;
  }
- .tick{
+    .tick{
      display:flex;
      gap: 20%;
      margin-top: 5%;
  }
-
- #logo{
-    width: 150px;
-  
-  
-}
-#Logos{
-    display: block;
-    gap:20px;
-    
-}
-
 
 
 }
@@ -252,162 +298,159 @@ i{
 
     body{
         font-size: 180px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     #Nav{
         font-size: 10px;
        
      }
  
- #navbar{
+    #navbar{
      display: flex;
-     gap: 6%;
+     gap: 3%;
      font-size: 10px;
-     margin-left: -5%;
+     margin-left: -2%;
    
  }
 
- #h2{
+    #h2{
      font-family: Arial, Helvetica, sans-serif;
      font-size: 50px;
  }
 
- .man{
+    .man{
      display: block;
      gap: 2px;
      font-size: 10px;
  }
- #Logos{
+    #Logos{
      display: block;
-     gap:250px;
+     gap:100px;
      
  }
- #login{
+    #login{
      border-radius: 30px;
-     width: 50px;
+     width: 40px;
      height: 30px;
      font-size: 8px;
     
  }
- #join{
+    #join{
      border-radius: 30px;
-     width: 50px;
-     height: 50px;
+     width: 40px;
+     height: 30px;
      background-color: rgb(215, 23, 23);
     
  
  
  }
- #hero-man{
+    #hero-man{
      width: 300px;
+     margin-left: 100px;
  }
- #explore{
+
+    #explore{
      border-radius: 30px;
      height: 50px;
      width: 300px;
      background-color: rgb(215, 23, 23);
      margin-left: -20%;
  }
- input{
+    input{
      border-radius: 30px;
      height: 20px;
      width: 400px;
  }
- .tick{
+    .tick{
      display:flex;
      gap: 15%;
      margin-top: 5%;
  }
 
- #logo{
+    #logo{
     width: 150px;
   
   
 }
-#Logos{
-    display: block;
-    gap:20px;
-    
-}
+
 }
 
 @media screen and (min-width: 999px) and (max-width:1300px){
 
     body{
-        font-size: 200%;
+        font-size: 180%;
     }
     #Nav{
-        font-size: 30px;
+        font-size: 25px;
        
        
      }
  
- #navbar{
+    #navbar{
      display: flex;
      gap: 8%;
-     font-size: 50px;
-     margin-left: -5%;
+     font-size: 30px;
+     margin-left: 5%;
    
  }
 
- #h2{
+    #h2{
      font-family: Arial, Helvetica, sans-serif;
      font-size: 80px;
  }
 
- .man{
+    .man{
      display: block;
      gap: 2px;
      font-size: 50px;
  }
- #Logos{
-     display: block;
-     gap:150px;
-     
- }
- #login{
+   
+ 
+    #login{
      border-radius: 30px;
-     width: 100px;
+     width: 70px;
      height: 30px;
      font-size: 8px;
     
  }
- #join{
+    #join{
      border-radius: 30px;
-     width: 100px;
+     width: 70px;
      height: 30px;
      background-color: rgb(215, 23, 23);
     
  
  
  }
- #hero-man{
+    #hero-man{
      width: 800px;
      position: center;
  }
- #explore{
+    #explore{
      border-radius: 30px;
      height: 30px;
      width: 50px;
      background-color: rgb(215, 23, 23);
-     margin-left: -20%;
+     margin-left: -5%;
  }
- input{
+    input{
      border-radius: 30px;
      height: 20px;
      width: 100px;
  }
- .tick{
+    .tick{
      display:flex;
      gap: 20%;
      margin-top: 5%;
  }
 
- #logo{
+    #logo{
     width: 150px;
   
   
 }
-#Logos{
+    #Logos{
     display:flex;
     gap:80px;
     font-size: 50px;
